--- a/less/uikit/core/form.less
+++ b/less/uikit/core/form.less
@@ -45,13 +45,14 @@
 
 
 @form-height:                                   @global-height;
-@form-padding:                                  4px 6px;
-@form-border:                                   @global-border;
+@form-padding:                                  0 @global-margin;
+@form-border:                                   #dcdfe6;
 @form-border-width:                             1px;
 @form-background:                               @global-background;
 @form-color:                                    @global-color;
+@form-border-radius:                            @global-border-radius;
 
-@form-focus-border:                             lighten(@button-primary-background, 10%);
+@form-focus-border:                             @button-primary-background;
 @form-focus-background:                         @global-default-background;
 @form-focus-color:                              @global-color;
 
@@ -70,7 +71,7 @@
 
 @form-small-height:                             @global-height-small;
 @form-large-height:                             @global-height-large;
-@form-small-padding:                            3px 3px;
+@form-small-padding:                            0 @global-margin-small;
 @form-large-padding:                            8px 6px;
 @form-small-font-size:                          round((@global-font-size * 0.85)); // 12px / 14px
 @form-large-font-size:                          round((@global-font-size * 1.14)); // 16px / 18px
@@ -128,7 +129,7 @@
     /* 2 */
     margin: 0;
     /* 3 */
-    border-radius: 0;
+    border-radius: @form-border-radius;
     /* 4 */
     font: inherit;
     color: inherit;
