--- a/less/uikit/uikit.less
+++ b/less/uikit/uikit.less
@@ -5,11 +5,8 @@
 @import "core/base.less";
 
 // Layout
-@import "core/grid.less";
-@import "core/panel.less";
+@import "core/card.less";
 @import "core/block.less";
-@import "core/article.less";
-@import "core/comment.less";
 @import "core/cover.less";
 
 // Navs
@@ -50,7 +47,6 @@
 @import "core/utility.less";
 @import "core/flex.less";
 @import "core/contrast.less";
-@import "core/print.less";
 
 // Extra
 // ========================================================================
