--- a/less/uikit/core/badge.less
+++ b/less/uikit/core/badge.less
@@ -13,21 +13,14 @@
 // Variables
 // ========================================================================
 
-@badge-background:                              #00a8e6;
-@badge-padding-horizontal:                      5px;
+@badge-padding-horizontal:                      @global-margin-small;
 @badge-font-size:                               10px;
-@badge-font-weight:                             bold;
-@badge-line-height:                             14px;
-@badge-color:                                   #fff;
-@badge-text-transform:                          none;
-@badge-hover-color:                             #fff;
+@badge-line-height:                             20px;
+@badge-color:                                   @global-primary-background;
 
-@badge-notification-font-size:                  12px;
-@badge-notification-line-height:                18px;
-
-@badge-success-background:                      #8cc14c;
-@badge-warning-background:                      #faa732;
-@badge-danger-background:                       #da314b;
+@badge-success-color:                           @global-success-background;
+@badge-warning-color:                           @global-warning-background;
+@badge-danger-color:                            @global-danger-background;
 
 
 /* ========================================================================
@@ -36,34 +29,24 @@
 
 .uk-badge {
     display: inline-block;
+    box-sizing: border-box;
     padding: 0 @badge-padding-horizontal;
-    background: @badge-background;
     font-size: @badge-font-size;
-    font-weight: @badge-font-weight;
     line-height: @badge-line-height;
     color: @badge-color;
+    background: fade(@badge-color, 10%);
+    border: 1px solid fade(@badge-color, 20%);
     text-align: center;
     vertical-align: middle;
-    text-transform: @badge-text-transform;
     .hook-badge;
 }
-
-/*
- * Keep color when badge is a link
- */
-
-a.uk-badge:hover { color: @badge-hover-color; }
 
 
 /* Modifier: `uk-badge-notification`;
  ========================================================================== */
 
 .uk-badge-notification {
-    box-sizing: border-box;
-    min-width: @badge-notification-line-height;
     border-radius: 500px;
-    font-size: @badge-notification-font-size;
-    line-height: @badge-notification-line-height;
 }
 
 
@@ -75,7 +58,9 @@ a.uk-badge:hover { color: @badge-hover-color; }
  */
 
 .uk-badge-success {
-    background-color: @badge-success-background;
+    color: @badge-success-color;
+    background-color: fade(@badge-success-color, 10%);
+    border: 1px solid fade(@badge-success-color, 10%);
     .hook-badge-success;
 }
 
@@ -84,7 +69,9 @@ a.uk-badge:hover { color: @badge-hover-color; }
  */
 
 .uk-badge-warning {
-    background-color: @badge-warning-background;
+    color: @badge-warning-color;
+    background-color: fade(@badge-warning-color, 10%);
+    border: 1px solid fade(@badge-warning-color, 10%);
     .hook-badge-warning;
 }
 
@@ -93,18 +80,17 @@ a.uk-badge:hover { color: @badge-hover-color; }
  */
 
 .uk-badge-danger {
-    background-color: @badge-danger-background;
+    color: @badge-danger-color;
+    background-color: fade(@badge-danger-color, 10%);
+    border: 1px solid fade(@badge-danger-color, 10%);
     .hook-badge-danger;
 }
 
 
 // Hooks
-// ========================================================================
-
-.hook-badge-misc;
+// ======================================================================== dd
 
 .hook-badge() {}
 .hook-badge-success() {}
 .hook-badge-warning() {}
 .hook-badge-danger() {}
-.hook-badge-misc() {}
