--- a/less/uikit/core/tab.less
+++ b/less/uikit/core/tab.less
@@ -19,21 +19,21 @@
 @tab-margin-horizontal:                  20px;
 @tab-margin-bottom:                      0px;
 
-@tab-item-padding-horizontal:            8px;
-@tab-item-padding-vertical:              5px;
-@tab-item-color:                         #999;
-@tab-item-hover-color:                   lighten(@global-color, 5%);
+@tab-item-height:                        42px;
+@tab-item-padding-horizontal:            @global-margin;
+@tab-item-padding-vertical:              0;
+@tab-item-color:                         #8391a5;
+@tab-item-hover-color:                   #1f2d3d;
 @tab-item-hover-text-decoration:         none;
-@tab-item-active-color:                  @global-color;
-@tab-item-disabled-color:                #999;
+@tab-item-active-color:                  #20a0ff;
+@tab-item-disabled-color:                #8391a5;
 
 @tab-border-width:                       1px;
 @tab-border:                             @global-border;
 
-@tab-item-border-width:                  2px;
-@tab-item-text-transform:                uppercase;
+@tab-item-border-width:                  3px;
 
-@tab-item-active-border:                 @global-primary-background;
+@tab-item-active-border:                 @tab-item-active-color;
 
 /* ========================================================================
    Component: Tab
@@ -178,7 +178,10 @@
 .hook-tab-misc;
 
 .hook-tab() {}
-.hook-tab-item() {}
+.hook-tab-item() {
+    height: @tab-item-height;
+    line-height: @tab-item-height;
+}
 .hook-tab-item-hover() {}
 .hook-tab-item-active() {}
 .hook-tab-item-disabled() {}
@@ -214,7 +217,6 @@
 
 .hook-tab-item() {
     border-bottom: @tab-item-border-width solid transparent;
-    text-transform: @tab-item-text-transform;
     -webkit-transition: color 0.1s ease-in-out;
     transition: color 0.1s ease-in-out;
 }
@@ -259,6 +261,7 @@
 .hook-tab-left-item() {
     border-right: @tab-item-border-width solid transparent;
     border-bottom: none;
+    box-sizing: border-box;
 }
 
 .hook-tab-right() {
