--- a/less/uikit/core/variables.less
+++ b/less/uikit/core/variables.less
@@ -35,17 +35,17 @@
 // Text
 //
 
-@global-color:                                  #303133;
-@global-muted-color:                            #f8f8f8;
+@global-color:                                  #606266;
+@global-muted-color:                            #f9fafc;
 @global-text-shadow:                            #fff;
 
-@global-link-color:                             #303133;
+@global-link-color:                             #606266;
 @global-link-hover-color:                       #409eff;
 
 @global-contrast-color:                         #fff;
 @global-contrast-text-shadow:                   rgba(0,0,0,0.1);
 
-@global-font-size:                              14px;
+@global-font-size:                              12px;
 @global-line-height:                            20px;
 
 //
@@ -58,12 +58,12 @@
 
 @global-default-background:                     #fff;
 @global-default-hover-background:               #fff;
-@global-default-active-background:              #eee;
+@global-default-active-background:              #f9fafc;
 
 @global-primary-background:                     #409eff;
-@global-success-background:                     #32d296;
-@global-warning-background:                     #ffc640;
-@global-danger-background:                      #f0506e;
+@global-success-background:                     #67c23a;
+@global-warning-background:                     #e6a23c;
+@global-danger-background:                      #f56c6c;
 
 //
 // Spacings
