more changes to components

--- a/less/uikit/core/base.less
+++ b/less/uikit/core/base.less
@@ -550,5 +550,11 @@ iframe { border: 0; }
 .hook-base-h6() {}
 .hook-base-hr() {}
 .hook-base-blockquote() {}
-.hook-base-pre() {}
+.hook-base-pre() {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
 .hook-base-misc() {}
