--- a/less/uikit/core/button.less
+++ b/less/uikit/core/button.less
@@ -9,7 +9,7 @@
 // Modifiers:       `uk-button-primary`
 //                  `uk-button-success`
 //                  `uk-button-danger`
-//                  `uk-button-link`
+//                  `uk-button-text`
 //                  `uk-button-mini`
 //                  `uk-button-small`
 //                  `uk-button-large`
@@ -56,12 +56,13 @@
 @button-large-font-size:                        round((@global-font-size * 1.14)); // 16px / 18px
 
 @button-padding-horizontal:                     16px;
-@button-mini-padding-horizontal:                8px;
-@button-small-padding-horizontal:               12px;
-@button-large-padding-horizontal:               24px;
+@button-mini-padding-horizontal:                4px;
+@button-small-padding-horizontal:               8px;
+@button-large-padding-horizontal:               32px;
 
 @button-background:                             @global-default-background;
 @button-color:                                  @global-color;
+@button-border-radius:                          @global-border-radius;
 @button-hover-background:                       @global-default-hover-background;
 @button-hover-color:                            @global-color;
 @button-active-background:                      @global-default-active-background;
@@ -69,37 +70,37 @@
 
 @button-primary-background:                     @global-primary-background;
 @button-primary-color:                          @global-contrast-color;
-@button-primary-hover-background:               lighten(@global-primary-background, 5%);
+@button-primary-hover-background:               lighten(@global-primary-background, 3%);
 @button-primary-hover-color:                    @global-contrast-color;
-@button-primary-active-background:              darken(@global-primary-background, 5%);
+@button-primary-active-background:              darken(@global-primary-background, 3%);
 @button-primary-active-color:                   @global-contrast-color;
 
 @button-success-background:                     @global-success-background;
 @button-success-color:                          @global-contrast-color;
-@button-success-hover-background:               lighten(@global-success-background, 5%);
+@button-success-hover-background:               lighten(@global-success-background, 3%);
 @button-success-hover-color:                    @global-contrast-color;
-@button-success-active-background:              darken(@global-success-background, 5%);
+@button-success-active-background:              darken(@global-success-background, 3%);
 @button-success-active-color:                   @global-contrast-color;
 
 @button-danger-background:                      @global-danger-background;
 @button-danger-color:                           @global-contrast-color;
-@button-danger-hover-background:                lighten(@global-danger-background, 5%);
+@button-danger-hover-background:                lighten(@global-danger-background, 3%);
 @button-danger-hover-color:                     @global-contrast-color;
-@button-danger-active-background:               darken(@global-danger-background, 5%);
+@button-danger-active-background:               darken(@global-danger-background, 3%);
 @button-danger-active-color:                    @global-contrast-color;
 
 @button-disabled-background:                    @global-muted-color;
 @button-disabled-color:                         lighten(@global-color, 10%);
 
-@button-link-color:                             #07D;
-@button-link-hover-color:                       #059;
-@button-link-hover-text-decoration:             underline;
+@button-link-color:                             @global-primary-background;
+@button-link-hover-text-decoration:             none;
 @button-link-disabled-color:                    lighten(@global-color, 10%);
 
 @button-border:                                 @global-border;
-@button-hover-border:                           darken(@global-border, 10%);
+@button-hover-border:                           @global-primary-background;
 @button-text-shadow:                            @global-text-shadow;
 @button-contrast-text-shadow:                   @global-contrast-text-shadow;
+@button-contrast-border:                        transparent;
 @button-contrast-hover-border:                  transparent;
 
 @button-group-border:                           transparent;
@@ -148,6 +149,7 @@
     /* 7 */
     display: inline-block;
     box-sizing: border-box;
+    border-radius: @button-border-radius;
     padding: 0 @button-padding-horizontal;
     background: @button-background;
     vertical-align: middle;
@@ -311,20 +313,21 @@
 
 /* Color */
 .uk-button-link { color: @button-link-color; }
+.uk-button-link.uk-button-primary { color: @button-primary-background; }
+.uk-button-link.uk-button-success { color: @button-success-background; }
+.uk-button-link.uk-button-danger { color: @button-danger-background; }
+.uk-button-link.uk-button-primary:hover { color: lighten(@button-primary-background, 5%); }
+.uk-button-link.uk-button-success:hover { color: lighten(@button-success-background, 5%); }
+.uk-button-link.uk-button-danger:hover { color: lighten(@button-danger-background, 5%); }
 
 .uk-button-link:hover,
 .uk-button-link:focus,
 .uk-button-link:active,
 .uk-button-link.uk-active {
-    color: @button-link-hover-color;
     text-decoration: @button-link-hover-text-decoration;
 }
 
 .uk-button-link:disabled { color: @button-link-disabled-color; }
-
-/* Focus */
-.uk-button-link:focus { outline: 1px dotted; }
-
 
 /* Size modifiers
  ========================================================================== */
@@ -403,20 +406,34 @@
 
 .hook-button() {
     border: 1px solid @button-border;
+    transition: 0.1s;
 }
-
-.hook-button-hover() { border-color: @button-hover-border; }
+.hook-button-hover() {
+    border-color: @button-hover-border;
+    color: @button-hover-border;
+}
 .hook-button-active() {}
-.hook-button-primary() {}
-.hook-button-primary-hover() {}
+.hook-button-primary() {
+    border-color: @button-contrast-border;
+}
+.hook-button-primary-hover() {
+    border-color: @button-contrast-hover-border;
+}
 .hook-button-primary-active() {}
-.hook-button-success() {}
-.hook-button-success-hover() {}
+.hook-button-success() {
+    border-color: @button-contrast-border;
+}
+.hook-button-success-hover() {
+    border-color: @button-contrast-hover-border;
+}
 .hook-button-success-active() {}
-.hook-button-danger() {}
-.hook-button-danger-hover() {}
+.hook-button-danger() {
+    border-color: @button-contrast-border;
+}
+.hook-button-danger-hover() {
+    border-color: @button-contrast-hover-border;
+}
 .hook-button-danger-active() {}
 .hook-button-disable() {}
 .hook-button-link() {}
 .hook-button-large() {}
-.hook-button-misc() {}
