--- a/less/uikit/core/list.less
+++ b/less/uikit/core/list.less
@@ -13,17 +13,15 @@
 // Variables
 // ========================================================================
 
-@list-nested-padding-left:                      0px;
+@list-nested-padding-left:                      0;
 
-@list-line-margin-top:                          0px;
+@list-line-margin-top:                          0;
 @list-line-border:                              #ddd;
 @list-line-border-width:                        1px;
 
-@list-striped-padding-vertical:                 5px;
-@list-striped-padding-horizontal:               5px;
-@list-striped-background:                       #f5f5f5;
+@list-striped-background:                       @global-default-active-background;
 
-@list-space-margin-top:                         10px;
+@list-space-margin-top:                         @global-margin-small;
 
 
 /* ========================================================================
@@ -79,7 +77,6 @@
  ========================================================================== */
 
 .uk-list-striped > li {
-    padding: @list-striped-padding-vertical @list-striped-padding-horizontal;
     .hook-list-striped;
 }
 
