--- a/less/uikit/core/dropdown.less
+++ b/less/uikit/core/dropdown.less
@@ -49,7 +49,7 @@
 @dropdown-navbar-animation:                     uk-slide-top-fixed;
 
 @dropdown-scrollable-height:                    200px;
-@dropdown-box-shadow:                           0 2px 12px 0 rgba(0,0,0,.1);
+@dropdown-box-shadow:                           @global-box-shadow;
 
 
 /* ========================================================================
