--- a/less/uikit/core/form.less
+++ b/less/uikit/core/form.less
@@ -99,7 +99,7 @@
 @form-stacked-font-weight:                      500;
 
 @form-horizontal-label-width:                   200px;
-@form-horizontal-label-margin-top:              @global-margin-small;
+@form-horizontal-label-margin-top:              @global-margin-mini;
 @form-horizontal-controls-text-padding-top:     @global-margin-small;
 
 @form-icon-font-size:                           @global-font-size;
