--- a/less/uikit/core/list.less
+++ b/less/uikit/core/list.less
@@ -16,7 +16,7 @@
 @list-nested-padding-left:                      0;
 
 @list-line-margin-top:                          0;
-@list-line-border:                              #ddd;
+@list-line-border:                              @global-border;
 @list-line-border-width:                        1px;
 
 @list-striped-background:                       @global-default-active-background;
@@ -29,7 +29,6 @@
  ========================================================================== */
 
 .uk-list {
-    padding: 0;
     list-style: none;
 }
 
