--- a/less/uikit/core/modal.less
+++ b/less/uikit/core/modal.less
@@ -36,19 +36,19 @@
 // ========================================================================
 
 @modal-z-index:                                 2000;
-@modal-background:                              rgba(0,0,0,0.6);
+@modal-background:                              rgba(0,0,0,.1);
 
 @modal-dialog-margin-vertical:                  50px;
-@modal-dialog-padding:                          0;
+@modal-dialog-padding:                          @global-margin-large;
 @modal-dialog-width:                            450px;
 @modal-dialog-background:                       #fff;
-@modal-dialog-box-shadow:                       0 5px 15px rgba(0,0,0,0.15);
+@modal-dialog-box-shadow:                       @global-box-shadow;
 
 @modal-dialog-large-width:                      600px;
-@modal-dialog-large-width-large:                930px;
-@modal-dialog-border-rounded:                   3px;
+@modal-dialog-large-width-large:                920px;
+@modal-dialog-border-rounded:                   @global-border-radius;
 
-@modal-header-margin-bottom:                    0;
+@modal-header-margin-bottom:                    @global-margin;
 
 @modal-footer-margin-top:                       @global-margin;
 
