--- a/less/uikit/core/variables.less
+++ b/less/uikit/core/variables.less
@@ -66,6 +66,12 @@
 @global-danger-background:                      #f56c6c;
 
 //
+// Shadow
+//
+
+@global-box-shadow:                             0 2px 12px 0 rgba(0,0,0,.1);
+
+//
 // Spacings
 //
 
