--- a/less/uikit/core/utility.less
+++ b/less/uikit/core/utility.less
@@ -42,7 +42,8 @@
 @utility-height-viewport-min-height:            600px;
 
 @utility-margin:                                @global-margin;
-@utility-margin-small:                          @global-margin-mini;
+@utility-margin-mini:                           @global-margin-mini;
+@utility-margin-small:                          @global-margin-small;
 @utility-margin-large:                          @global-margin-large;
 
 @utility-border-rounded:                        3px;
@@ -372,6 +373,27 @@
 .uk-margin-small-x {
     margin-left: @utility-margin-small !important;
     margin-right: @utility-margin-small !important;
+}
+
+/*
+ * Smaller margins
+ */
+
+.uk-margin-mini { margin-bottom: @utility-margin-mini; }
+* + .uk-margin-mini { margin-top: @utility-margin-mini; }
+
+.uk-margin-mini-top { margin-top: @utility-margin-mini !important; }
+.uk-margin-mini-bottom { margin-bottom: @utility-margin-mini !important; }
+.uk-margin-mini-left { margin-left: @utility-margin-mini !important; }
+.uk-margin-mini-right { margin-right: @utility-margin-mini !important; }
+
+.uk-margin-mini-y {
+    margin-top: @utility-margin-mini !important;
+    margin-bottom: @utility-margin-mini !important;
+}
+.uk-margin-mini-x {
+    margin-left: @utility-margin-mini !important;
+    margin-right: @utility-margin-mini !important;
 }
 
 /*
