get rid of the complexity of 2 tables

--- a/less/uikit/core/form.less
+++ b/less/uikit/core/form.less
@@ -71,7 +71,7 @@
 
 @form-small-height:                             @global-height-small;
 @form-large-height:                             @global-height-large;
-@form-small-padding:                            0 @global-margin;
+@form-small-padding:                            0 @global-margin-small;
 @form-large-padding:                            8px 6px;
 @form-small-font-size:                          round((@global-font-size * 0.85)); // 12px / 14px
 @form-large-font-size:                          round((@global-font-size * 1.14)); // 16px / 18px
